# forecast_and_classifier

./: README.md  pyproject.toml
data/: future_forecast.csv  predictions_week_29_30.csv  sales_data.csv  test_data.csv  text_sample_data.csv  text_samples_classified.csv  text_test_classified.csv
src/: classifier.py  classify_utils.py  classifying.py  forecast_utils.py  forecasting.py  forecasts.py  generate_sales_data.py  generate_sample_data.py  generate_test_data.py  generate_text_sample_data.py  generate_text_test_data.py  main.py
