[tool.poetry]
name = "forecast-and-classifier"
version = "0.1.0"
description = ""
authors = ["Levent Arturo Chaves Moreno <levent.arturo@im.unam.mx>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
