[tool.poetry]
name = "forecast-and-classifier"
version = "0.1.0"
description = ""
authors = ["Levent Arturo Chaves Moreno <levent.arturo@im.unam.mx>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
nltk = "^3.9.1"
numpy = ">=1.26.0,<2.1.0"
tensorflow-macos = "^2.16.2"
tensorflow-metal = "^1.1.0"
transformers = "^4.46.3"
tf-keras = "<2.18.0"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
matplotlib = "^3.9.3"
statsmodels = "^0.14.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
